[package]
name = "raw-gl-context"
version = "0.1.0"
authors = [
    "Micah Johnston <micah@glowcoil.com>",
    "Mirko Covizzi <mrkcvzz@gmail.com>",
]
edition = "2018"

[dependencies]
raw-window-handle = "0.3.3"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi", "minwindef", "windef", "wingdi", "winuser"] }

[dev-dependencies]
gl = "0.14.0"
winit = "0.22.2"
