[package]
name = "raw-gl-context"
version = "0.1.3"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
description = "Library for creating an OpenGL context from a RawWindowHandle"
repository = "https://github.com/glowcoil/raw-gl-context"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
raw-window-handle = "0.5"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi", "minwindef", "ntdef", "windef", "wingdi", "winnt", "winuser"] }
uuid = { version = "0.8", features = ["v4"] }

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.3", features = ["xlib", "glx"] }

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"
core-foundation = "0.9.1"

[dev-dependencies]
gl = "0.14.0"
winit = "0.28"
